Clean up to apple music implementation
