# ui/src/shared/generated/api-contract.schema.json
@@ -297,9 +297,6 @@
         "airplay2": {
           "type": "boolean"
         },
-        "apple_music_capture": {
-          "type": "boolean"
-        },
         "apple_music_musickit": {
           "type": "boolean"
         },
@@ -330,7 +327,6 @@
       },
       "required": [
         "airplay2",
-        "apple_music_capture",
         "apple_music_musickit",
         "asio",
         "experimental_dsd256",
